maybe solves footer out of bounds

--- a/src/static/index.scss
+++ b/src/static/index.scss
@@ -4,7 +4,6 @@ $base-color: #0389CD;
 
 html {
     scroll-behavior: smooth;
-    min-height: 100%;
 }
 
 nav {
